linked the blog to my page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: base
     <ul>
       <li><a href='{{ site.baseurl }}/videos'>All Videos</a></li>
       &bull;
-      <li><a href='{{ site.baseurl }}/about'>About</a></li>
+      <li><a href='http://amrsekilly.com'>About</a></li>
     </ul>
   </nav>
 </header>
